[package]
authors = ["JmPotato <ghzpotato@gmail.com>"]
categories = ["development-tools", "asynchronous", "concurrency"]
description = "A crate to help you observe the thread or future CPU usage"
documentation = "https://docs.rs/cpu_observer"
edition = "2021"
homepage = "https://github.com/JmPotato/cpu_observer"
keywords = ["CPU", "profile", "thread", "future"]
license = "Apache-2.0"
name = "cpu_observer"
readme = "README.md"
repository = "https://github.com/JmPotato/cpu_observer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
futures = "0.3"
futures-timer = "3.0.2"
lazy_static = "1.3"
libc = "0.2"
yatp = {git = "https://github.com/tikv/yatp.git", branch = "master"}

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = {git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229b2c1fcc44118bef7eff127128"}

[dev-dependencies]
rand = "0.8"
